Fix remaining waypoint editor layout bugs

--- a/src/main.scss
+++ b/src/main.scss
@@ -29,11 +29,9 @@ $compactBreakpoint: $editorWidth + $minMapWidth;
 
 #waypoint-editor-wrapper {
     grid-area: editor;
-}
 
-#waypoint-editor {
-    width: 100%;
-    height: 100%;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
 
     border-right: 1px solid rgba(0, 0, 0, 0.2);
 
@@ -41,9 +39,6 @@ $compactBreakpoint: $editorWidth + $minMapWidth;
         border-right: none;
         border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     }
-
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
 }
 
 #waypoint-editor-header {
